<resources>
    <string name="app_name" translatable="false">Smart Campus</string>
    <string name="room_name" translatable="false">GEI 213</string>
    <string name="order_id_mock" translatable="false">08:00 - 09:00</string>
    <string name="requests_count_mock" translatable="false">Context Aware IoT System</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">GROUP</string>
    <string name="client_name_mock" translatable="false">Damaris, Dorian, Julien and Juan</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">RESUME</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">UF</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">Innovative Project</string>
    <string name="deadline_badge" translatable="false">Duration</string>
    <string name="deadline_time_mock" translatable="false">60 minutes</string>
    <string name="download" translatable="false">DOWNLOAD</string>
    <string name="btn_annotation_mock" translatable="false">Download group report</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">This is a resume of the project presentation</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
