<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">



    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <TextView
            android:id="@+id/title_time_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_id_mock"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/head_image" />

        <TextView
            android:id="@+id/group_title"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/head_image"
            android:layout_alignLeft="@id/head_image"
            android:layout_alignStart="@id/head_image"
            android:paddingTop="8dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/requests_count_mock" />


    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/subtitle1"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/sender_badge" />

            <TextView
                android:id="@+id/content_subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/subtitle1"
                android:layout_alignLeft="@id/subtitle1"
                android:layout_below="@id/subtitle1"
                android:layout_marginBottom="2dp"
                android:text="@string/client_name_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold"/>


        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/subtitle2"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/from_badge" />

                <TextView
                    android:id="@+id/content_subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/subtitle2"
                    android:layout_alignStart="@+id/subtitle2"
                    android:layout_below="@+id/subtitle2"
                    android:layout_marginTop="5dp"
                    android:text="@string/content_from2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/subtitle3"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/delivery_date_badge" />

                <TextView
                    android:id="@+id/content_subtitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/subtitle3"
                    android:layout_alignStart="@+id/subtitle3"
                    android:layout_below="@+id/subtitle3"
                    android:text="@string/delivery_date_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/subtitle4"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/deadline_badge" />

                <TextView
                    android:id="@+id/content_subtitle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/subtitle4"
                    android:layout_alignStart="@id/subtitle4"
                    android:layout_below="@id/subtitle4"
                    android:text="@string/deadline_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <!-- request button -->
        <TextView
            android:id="@+id/content_request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/btnRequest"
            android:padding="10dp"
            android:text="@string/download"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/download_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/btn_annotation_mock"
            android:textAlignment="center"
            android:textColor="@color/contentBadgeTitle"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>